tests/paczka1/fuzzy1/15793372.err
Error in line 2: MeneT2sjSQ S428 91,8
Error in line 3: MeneT2sjSQ S581 26,3
Error in line 5: MeneT2sjSQ S428 56,7
Error in line 6: MeneT2sjSQ S22 36,6
Error in line 14: NLTHt6plUmh S428 48,9
Error in line 16: MYalw2CI S581 21,7
Error in line 20: 1ZpE9UW S22 8,7
Error in line 24: MeneT2sjSQ S428 60,6
